sumo/tests/netconvert/errors/XML/broken_edge/edge#shape__empty4/errors.netconvert
Error: At least one number is missing in shape definition for edge '4'.
Quitting (on error).
